@@ -1,3 +1,7 @@
+2006-11-02 Niklas Knutsson  <nq@altern.org>
+
+	* Connect "Exp" button Exp RPN operation and add Ctrl+Shift+E shortcut
+
 2006-09-05 Niklas Knutsson  <nq@altern.org>
 
 	* Integer factorization
